@startuml
title Diagrama de Clases - Sistema Agricola
skinparam defaultFontSize 13
skinparam backgroundColor #F8F9FA

class Categoria {
  - id: int
  - nombre: string
  - descripcion: text
  - fecha_creacion: datetime
  - fecha_actualizacion: datetime
}

class Producto {
  - id: int
  - nombre: string
  - descripcion: text
  - precio: decimal
  - stock: int
  - imagen: image
  - fecha_creacion: datetime
  - fecha_actualizacion: datetime
}

class Compra {
  - id: int
  - cantidad: int
  - precio_unitario: decimal
  - total: decimal
  - fecha_compra: datetime
}

class Venta {
  - id: int
  - cantidad: int
  - precio_unitario: decimal
  - total: decimal
  - fecha_venta: datetime
}

class Usuario {
  - id: int
  - nombre_usuario: string
  - correo: string
  - contrasena: string
}

class Grupo {
  - id: int
  - nombre: string
}

Categoria "1" -- "0..*" Producto : contiene
Producto "1" -- "0..*" Compra : incluido en
Producto "1" -- "0..*" Venta : vendido en
Usuario "1" -- "0..*" Compra : realiza
Usuario "1" -- "0..*" Venta : registra
Usuario "*" -- "*" Grupo : pertenece a

@enduml
